# FileDrop

./: Cargo.toml  Guide.txt  README.md  build.rs  diff.md  filedrop_agent_prompt.md
.github/workflows/: release.yml
docs/: README.md  index.html  script.js  style.css
src/: config.rs  installer.rs  main.rs
src/discovery/: mod.rs
src/hotspot/: mod.rs
src/security/: certs.rs  encryption.rs  mod.rs  pairing.rs
src/share/: mod.rs  server.rs
src/sync/: mod.rs  server.rs  watcher.rs
src/transfer/: chunker.rs  client.rs  mod.rs  protocol.rs  server.rs  zipper.rs
src/tui/: app.rs  events.rs  main_menu.rs  mod.rs  share_configurator.rs  ui.rs
src/web/: index.html  mod.rs
